# tws

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run.sh
.cache/clangd/index/: http.cppm.9BD3E6CE8A3CDA2D.idx  main.cpp.51B9EAAC2EE636DF.idx  server.cpp.5C031C6E3CDE2939.idx  server.cppm.58589ECE624E6F71.idx
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
example/: CMakeLists.txt  client_socket.cpp  main.cpp  server_socket.cpp  socket_client.cpp  socket_server.cpp
example/http/: CMakeLists.txt  main copy.cpp  main.cpp
source/: CMakeLists.txt
source/http/: CMakeLists.txt  http.cppm  server.cpp  server.cppm
source/net/: CMakeLists.txt  net.cppm  server_socket.cpp  server_socket.cppm  socket.cpp  socket.cppm
