set(LIBRARY_NAME "net")

file(GLOB_RECURSE MODULES_INTERFACE_FILES *.cppm)
file(GLOB_RECURSE MODULES_IMPLEMENTATION_FILES *.cpp)

add_library(${LIBRARY_NAME})

target_sources(${LIBRARY_NAME}
    PUBLIC FILE_SET CXX_MODULES FILES
    ${MODULES_INTERFACE_FILES}
    PRIVATE
    ${MODULES_IMPLEMENTATION_FILES}
)